force-app/main/default/objects/Campaign/fields/conference360__Attendee_Declined_Status__c.field-meta.xml
<CustomField>
    <fullName>conference360__Attendee_Declined_Status__c</fullName>
    <inlineHelpText>Define the Campaign Member Status for when an Attendee is created with a Registration Status of &quot;Declined&quot;.</inlineHelpText>
    <label>Attendee &quot;Declined&quot; Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>