force-app/main/default/objects/Campaign/fields/conference360__Attendee_No_Show_Status__c.field-meta.xml
<CustomField>
    <fullName>conference360__Attendee_No_Show_Status__c</fullName>
    <inlineHelpText>Define the Campaign Member Status for when an Attendee is created with a Attendance Status of &quot;No Show&quot;.</inlineHelpText>
    <label>Attendee &quot;No Show&quot; Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>