force-app/main/default/objects/Campaign/fields/CventEvents__EventStub__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__EventStub__c</fullName>
    <externalId>true</externalId>
    <label>Event Stub</label>
    <length>36</length>
    <type>Text</type>
</CustomField>