force-app/main/default/objects/Campaign/fields/ucinn_ascendv2__Motivation_Code__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Motivation_Code__c</fullName>
    <externalId>true</externalId>
    <label>Motivation Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>