force-app/main/default/objects/Campaign/recordTypes/Cvent_Events.recordType-meta.xml
<RecordType>
    <fullName>Cvent_Events</fullName>
    <active>true</active>
    <description>This will be the new placeholder for cvent event data</description>
    <label>Cvent Events</label>
</RecordType>