force-app/main/default/objects/Campaign/recordTypes/ucinn_ascendv2__Appeal.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__Appeal</fullName>
    <active>true</active>
    <description>ascend Record Type for Appeal records</description>
    <label>Appeal</label>
</RecordType>