force-app/main/default/objects/Campaign/listViews/Chapel_Bell_Lybunt_v2.listView-meta.xml
<ListView>
    <fullName>Chapel_Bell_Lybunt_v2</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <filterScope>Everything</filterScope>
    <label>Chapel Bell Lybunt v2</label>
</ListView>