force-app/main/default/objects/Campaign/listViews/Comprehensive_Campaigns.listView-meta.xml
<ListView>
    <fullName>Comprehensive_Campaigns</fullName>
    <columns>HAM_Ultimate_Parent__c</columns>
    <columns>PARENT_NAME</columns>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>HAM_External_Id__c</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Campaign.Comprehensive_Campaign</value>
    </filters>
    <label>Comprehensive Campaigns</label>
</ListView>