force-app/main/default/objects/Campaign/listViews/Historic_Campaign_Record_type.listView-meta.xml
<ListView>
    <fullName>Historic_Campaign_Record_type</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>HAM_External_Id__c</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Campaign.Historical</value>
    </filters>
    <label>Historic Campaign Record type</label>
</ListView>