force-app/main/default/objects/Campaign/listViews/MLW_Appeals.listView-meta.xml
<ListView>
    <fullName>MLW_Appeals</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>ucinn_ascendv2__Motivation_Code__c</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>HAM_Channel__c</columns>
    <columns>HAM_Client__c</columns>
    <columns>CAMPAIGN.RECORDTYPE</columns>
    <columns>CAMPAIGN.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Campaign.ucinn_ascendv2__Appeal</value>
    </filters>
    <label>MLW Appeals</label>
    <sharedTo>
        <group>HAM_AisDataEntry</group>
    </sharedTo>
</ListView>