force-app/main/default/objects/Campaign/listViews/Org_Campaign_Hierarchy.listView-meta.xml
<ListView>
    <fullName>Org_Campaign_Hierarchy</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.RECORDTYPE</columns>
    <columns>AMOUNT_ALL</columns>
    <columns>TOT_AMOUNT_ALL</columns>
    <columns>CAMPAIGN.ACTIVE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Org_Campaign_Hierarchy</label>
</ListView>