force-app/main/default/objects/Campaign/listViews/Subscriptions.listView-meta.xml
<ListView>
    <fullName>Subscriptions</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>Sort_Order__c</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.ACTIVE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>SMS_Supported__c</columns>
    <columns>Email_Supported__c</columns>
    <columns>SFMC_Sync__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SFMC_Sync__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CAMPAIGN.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Subscriptions</label>
</ListView>